// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#TravelArrangement render - column 1`] = `
<Stack
  spaceAfter="large"
>
  <Heading
    element="h4"
    spaceAfter="small"
    type="title3"
  >
    <Translate
      html={false}
      t="holidays.detail.travel_arrangement"
      transform={[Function]}
      values={Object {}}
    />
  </Heading>
  <TravelArrangement__SectorWrapper
    key="1"
  >
    <Sector
      data={
        Object {
          "from": "Prague, Czech Republic",
          "note": "Transfer to hotel NOT included",
          "stops": "0",
          "to": "Denpasar, Bali",
        }
      }
      direction="takeOff"
    />
  </TravelArrangement__SectorWrapper>
  <TravelArrangement__SectorWrapper
    key="2"
  >
    <Sector
      data={
        Object {
          "from": "Denpasar, Bali",
          "note": "Transfer to hotel NOT included",
          "stops": "2",
          "to": "Prague, Czech Republic",
        }
      }
      direction="landing"
    />
  </TravelArrangement__SectorWrapper>
</Stack>
`;

exports[`#TravelArrangement render - row 1`] = `
<Stack
  spaceAfter="large"
>
  <Heading
    element="h4"
    spaceAfter="small"
    type="title3"
  >
    <Translate
      html={false}
      t="holidays.detail.travel_arrangement"
      transform={[Function]}
      values={Object {}}
    />
  </Heading>
  <Stack
    desktop={
      Object {
        "direction": "row",
        "spacing": "comfy",
      }
    }
  >
    <TravelArrangement__SectorWrapper
      key="1"
    >
      <Sector
        data={
          Object {
            "from": "Prague, Czech Republic",
            "note": "Transfer to hotel NOT included",
            "stops": "0",
            "to": "Denpasar, Bali",
          }
        }
        direction="takeOff"
      />
    </TravelArrangement__SectorWrapper>
    <TravelArrangement__SectorWrapper
      key="2"
    >
      <Sector
        data={
          Object {
            "from": "Denpasar, Bali",
            "note": "Transfer to hotel NOT included",
            "stops": "2",
            "to": "Prague, Czech Republic",
          }
        }
        direction="landing"
      />
    </TravelArrangement__SectorWrapper>
  </Stack>
</Stack>
`;
